--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
                     </div>
                     <div class="page5-div6 slide-in-elliptic-top-fwd">
-                        <img src="./img/5-9.png" alt="" class="page5-img bounce-bottom">
+                        <img src="./img/5-9.png" alt="" class="page5-img heartbeat">
                     </div>
 
 
